--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.476.0",
     "mermaid": "^11.4.1",
     "next": "15.2.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-d3-tree": "^3.6.5",
     "react-dom": "^19.0.0",
